--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome</h1>
-    <p>How may we help you</p>
+    <h1>Home page</h1>
+    <p>
+        <ul>
+            <li><a href="./about.html">About us</a></li>
+            <li><a href="./contact.html">Contact us</a></li>
+            <li><a href="./helpcenter.html" target="_blank">Help center</a></li>
+            <li><a href="./service.html" target="_blank">Our serivces</a></li>
+        </ul>
+    </p>
 </body>
 </html>
